crates/toml/tests/snapshots/invalid/table/duplicate-key-05.stderr
TOML parse error at line 4, column 2
  |
4 | [fruit.apple.taste] # INVALID
  |  ^^^^^^^^^^^^^^^^^
duplicate key
